--- a/styles.css
+++ b/styles.css
@@ -398,6 +398,7 @@ a {
   align-items: flex-start;
   gap: 10px;
   margin-left: -11px;
+  position: relative;
 }
 
 .contact-form {
@@ -490,6 +491,14 @@ label {
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
+}
+
+fieldset {
+  position: absolute;
+  top: 224px;
+  width: 860px;
+  height: 60px;
+  clip: rect(0, 0, 0, 0);
 }
 
 .radio-group {
